spacing fixed on skills page

--- a/css/skills.css
+++ b/css/skills.css
@@ -7,7 +7,7 @@
 
 .skillBox{
   width: 20%;
-  height: 200px;
+  height: 250px;
   border-radius: 20%;
   border: solid black 2px;
   padding: 10px;
